# protohackers

./: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  fly.toml
.github/workflows/: coverage.yml
go-solutions/speed_daemon/: client.py  data_types_test.go  go.mod  main.go  messages_test.go  speed_daemon
go-solutions/speed_daemon/clients/: camera.go  dispatcher.go
go-solutions/speed_daemon/data_types/: data.go
go-solutions/speed_daemon/messages/: camera.go  dispatcher.go  error.go  heartbeat.go  kind.go  plate.go  ticket.go
go-solutions/speed_daemon/server/: database.go  speed_daemon.go
proto-serde/: Cargo.toml
proto-serde/src/: decode.rs  encode.rs  error.rs  lib.rs
protohackers/: Cargo.toml
protohackers/budget-chat/: Cargo.toml
protohackers/budget-chat/src/: chat_room.rs  connection.rs  errors.rs  lib.rs  main.rs  manager.rs  member.rs  room.rs  staging.rs  transport.rs
protohackers/echo-server/: Cargo.toml
protohackers/echo-server/src/: lib.rs  main.rs
protohackers/job-centre/: Cargo.toml
protohackers/job-centre/src/: connection.rs  lib.rs  main.rs  message.rs  state.rs  supervisor.rs
protohackers/mob-in-the-middle/: Cargo.toml
protohackers/mob-in-the-middle/src/: main.rs
protohackers/prime-time/: Cargo.toml
protohackers/prime-time/src/: lib.rs  main.rs
protohackers/src/: main.rs
protohackers/src/solutions/: echo_server.rs  mod.rs  prime_time.rs
protohackers/unusual-database-program/: Cargo.toml
protohackers/unusual-database-program/src/: main.rs
python-solutions/: main.py  requirements.dev.txt  requirements.txt
python-solutions/common/: frame.py  message.py  reader.py  server.py  writer.py
python-solutions/solutions/: generate_models.sh
python-solutions/solutions/speed_daemon/: README.md  app.py  connection.py  connection_manager.py  exceptions.py  messages.py  models.py  state.py
python-solutions/solutions/speed_daemon/state_machine/: __init__.py  models.py
python-solutions/tests/: speed_daemon.py
speed-daemon/: Cargo.toml
speed-daemon/src/: message.rs
