[package]
name = "speed-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.4"
color-eyre = "0.6.3"
eyre = "0.6.12"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
futures-util = { version = "0.3.30", features = ["tokio-io", "sink"] }
test-case = "3.3.1"
