[package]
name = "echo-server"
version = "0.1.0"
edition = "2021"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
homepage = "https://github.com/aalekhpatel07/protohackers"
repository = "https://github.com/aalekhpatel07/protohackers"
documentation = "https://github.com/aalekhpatel07/protohackers"
license-file = "LICENSE"
description = "My solution to the TCP challenge Echo Server from protohackers.com"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
